environmental variable samples

--- a/.env.sample
+++ b/.env.sample
@@ -3,8 +3,9 @@ SECRET_KEY="SOME-COMPLEX@@SECRET-KEY"
 ALGORITHM="HS256"
 JWT_REFRESH_EXPIRY=40
 DB_HOST=localhost
-DB_PASSWORD=Pius17
+DB_PASSWORD=Password
 DB_PORT=3306
-DB_USER=Pius
+DB_USER=Auth_user
 DB_NAME=auth_system
-DB_TYPE=sqlite
+DB_TYPE=postgresql
+DB_URL=postgresql://username:password@localhost:5432/test
