--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ databases = "^0.9.0"
 uuid7 = "^0.1.0"
 pydantic-settings = "^2.8.1"
 python-decouple = "^3.8"
+alembic = "^1.14.1"
+PyMySQL = "^1.1.1"
 
 [tool.poetry.dev-dependencies]
 
