--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ pydantic-settings = "^2.8.1"
 python-decouple = "^3.8"
 alembic = "^1.14.1"
 PyMySQL = "^1.1.1"
+jwt = "^1.3.1"
+PyJWT = "^2.10.1"
 
 [tool.poetry.dev-dependencies]
 
