encrypter key for totp encrypting

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 SECRET_KEY="SOME-COMPLEX@@SECRET-KEY"
+ENCRYPTER_SECRET_KEY="SOME SECURE 32 BYTE KEY" # e.g "b's1KeM6GpLRdkpEtZKxmO57nMwyElr0RyQh6tGrel3ZQ='"
 ALGORITHM="HS256"
 JWT_REFRESH_EXPIRY=40
 DB_HOST=localhost
