--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ alembic = "^1.14.1"
 PyMySQL = "^1.1.1"
 jwt = "^1.3.1"
 PyJWT = "^2.10.1"
+cryptography = "^44.0.2"
 
 [tool.poetry.dev-dependencies]
 
