--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ PyMySQL = "^1.1.1"
 jwt = "^1.3.1"
 PyJWT = "^2.10.1"
 cryptography = "^44.0.2"
+user-agents = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 
