--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,10 @@ DB_USER=Auth_user
 DB_NAME=auth_system
 DB_TYPE=postgresql
 DB_URL=postgresql://username:password@localhost:5432/test
+
+# SMTP SERVER CONFIG
+SMTP_SERVER="smtp-server" # Defaults to Google
+SMTP_PORT="smtp-port"   # Defaults to 587
+EMAIL_ADDRESS="your-email-address"
+EMAIL_PASSWORD="your-email-app-password"
+MJML_TEMPLATE_DIR="dir-to-your-mjml-templates"   # Defaults to "{BASE_DIR}/mjml/templates"
