--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ jwt = "^1.3.1"
 PyJWT = "^2.10.1"
 cryptography = "^44.0.2"
 user-agents = "^2.2.0"
+Jinja2 = "^3.1.6"
+mjml = "^0.11.0"
 
 [tool.poetry.dev-dependencies]
 
