--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 SECRET_KEY="SOME-COMPLEX@@SECRET-KEY"
-ENCRYPTER_SECRET_KEY="SOME SECURE 32 BYTE KEY" # e.g "b's1KeM6GpLRdkpEtZKxmO57nMwyElr0RyQh6tGrel3ZQ='"
+ENCRYPTER_SECRET_KEY="SOME SECURE 32 BYTE KEY" # e.g "b'HFLX6LXwzNblOuPF4e3yMjBaKWlwP4P1ES2x-e2z0jM='"
+VERIFICATION_TOKEN_EXPIRATION_TIME=10
 ALGORITHM="HS256"
 JWT_REFRESH_EXPIRY=40
 DB_HOST=localhost
@@ -17,3 +18,8 @@ SMTP_PORT="smtp-port"   # Defaults to 587
 EMAIL_ADDRESS="your-email-address"
 EMAIL_PASSWORD="your-email-app-password"
 MJML_TEMPLATE_DIR="dir-to-your-mjml-templates"   # Defaults to "{BASE_DIR}/mjml/templates"
+
+COMPANY_LOGO_URL="http://link-to-your-company-logo"
+
+FRONTEND_EMAIL_VERIFICATION_URL="https://frontend-url.com/verify-email"
+FRONTEND_MAGIC_LINK_VERIFICATION_URL="https://frontend-url.com/magic-link-login"
