--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,16 @@ PyMySQL = "^1.1.1"
 jwt = "^1.3.1"
 PyJWT = "^2.10.1"
 cryptography = "^44.0.2"
-user-agents = "^2.2.0"
+user-agents = "2.2.0"
 Jinja2 = "^3.1.6"
 mjml = "^0.11.0"
+fastapi-mail = "^1.4.2"
+slowapi = "^0.1.9"
+premailer = "^3.10.0"
+qrcode = "^8.1"
+twilio = "^9.5.2"
+pillow = "^11.2.1"
+geoip2 = "^5.0.1"
 
 [tool.poetry.dev-dependencies]
 
