--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ qrcode = "^8.1"
 twilio = "^9.5.2"
 pillow = "^11.2.1"
 geoip2 = "^5.0.1"
+APScheduler = "^3.11.0"
 
 [tool.poetry.dev-dependencies]
 
