Update JWT refresh expiry variable: Change JWT_REFRESH_EXPIRY to JWT_REFRESH_EXPIRY_DAYS and set default to 30 days

--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@ SECRET_KEY="SOME-COMPLEX@@SECRET-KEY"
 ENCRYPTER_SECRET_KEY="SOME SECURE 32 BYTE KEY" # e.g "b'HFLX6LXwzNblOuPF4e3yMjBaKWlwP4P1ES2x-e2z0jM='"
 VERIFICATION_TOKEN_EXPIRATION_TIME=10
 ALGORITHM="HS256"
-JWT_REFRESH_EXPIRY=40
+JWT_REFRESH_EXPIRY_DAYS=30 # defaults to 30 days
 DB_HOST=localhost
 DB_PASSWORD=Password
 DB_PORT=3306
