--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ APScheduler = "^3.11.0"
 Authlib = "^1.5.2"
 httpx = "^0.28.1"
 itsdangerous = "^2.2.0"
+pycountry-convert = "^0.7.2"
 
 [tool.poetry.dev-dependencies]
 
