--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ Authlib = "^1.5.2"
 httpx = "^0.28.1"
 itsdangerous = "^2.2.0"
 pycountry-convert = "^0.7.2"
+pytz = "^2025.2"
 
 [tool.poetry.dev-dependencies]
 
