Update .gitignore to include additional log and temporary files for better cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@ note.txt
 .qodo
 notes.txt
 notes*
+app.log
+test.py
+api/core/logging/app.log
+pwp*
+.gitignore
+trashbin/
+*.mmdb
+*.gz
+GeoLite2-*
